fixing hover issues on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -57,9 +57,12 @@ header {
     font-size: 1rem;
     cursor: pointer;
 }
-.choice:hover {
-    background-color: var(--teal-v1);
-    color: var(--off-white);
+
+@media (hover: hover) and (pointer: fine) {
+    .choice:hover {
+        background-color: var(--teal-v1);
+        color: var(--off-white);
+    }
 }
 
 .choice-succ {
